--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "tsify": "4.0.1",
     "typescript": "3.3.1",
     "uglifyify": "5.0.1",
-    "watchify": "3.11.0"
+    "watchify": "3.11.0",
+    "ipfs-http-client": "30.1.3",
+    "ts-node": "8.1.0"
   }
 }
